Fix user page permissions visibility, user info in navbar

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -57,3 +57,14 @@
   height: auto;
   max-height: 18vh;
 }
+
+.user-icon {
+  width: 36px;
+  height: 36px;
+  border-radius: 50%;
+  background-color: #0d6efd;
+  color: white;
+  font-weight: bold;
+  font-size: 1rem;
+  text-transform: uppercase;
+}
